Add basic C# example

--- a/src/csharp/AvroCSharp/AvroCSharp.csproj
+++ b/src/csharp/AvroCSharp/AvroCSharp.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Apache.Avro" Version="1.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GeneratedSchemaTypes\GeneratedSchemaTypes.csproj" />
+  </ItemGroup>
+
 </Project>
