--- a/src/fsharp/AvroFSharp/AvroFSharp.fsproj
+++ b/src/fsharp/AvroFSharp/AvroFSharp.fsproj
@@ -9,4 +9,12 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Apache.Avro" Version="1.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\csharp\GeneratedSchemaTypes\GeneratedSchemaTypes.csproj" />
+  </ItemGroup>
+
 </Project>
