--- a/src/fsharp/AvroFSharp/AvroFSharp.fsproj
+++ b/src/fsharp/AvroFSharp/AvroFSharp.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="LogicalTypesHack.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
