Ignore IDE settings, tmp files and tools

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,14 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+generated/
+
+# The Avro tools etc.
+*.jar
+
+# Jetbrains IDE settings (Rider, PyCharm...)
+.idea/
+
+# Our test data files
+tmp/
